--- a/home.html
+++ b/home.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-</head>
-<body>
-    <ul>
-        <li><a href="home.html">HOME</a></li>
-        <li><a href="recipes.html">RECIPES</a></li>
-        <li><a href="suggest.html">SUGGEST</a></li>
-    
+<html>
+    <head>
+        <title> La mia scuola </title>
+    </head>
+    <body>
+        <h1 style="font-size: 70px;"><b>I.T.E.T. Leonardo Da Vinci</b></h1>
+        <h2><i>Via Colonnello Francesco Magistri, 40, 98057, Milazzo ME</i></h2>
+        <img src="download (1).jfif" width="500" height="500">
+        <br>
+        <p>Indirizzi di studio:</p>
+        <ul type="I">
+            <li>Amministrazione, Finanza e Marketing</li>
+            <li>Turismo</li>
+            <li>Costruzioni</li>
+            <li>Informatica e Telecomunicazioni</li>
+            <li>Grafica e Comunicazione</li>
+            <li>Transporti e Logistica</li>
         </ul>
-  HOME 
-</body>
+    </body>
 </html>
