--- a/recipes.html
+++ b/recipes.html
@@ -4,14 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipes</title>
+    <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
-    <ul>
-        <li><a href="home.html">HOME</a></li>
-        <li><a href="recipes.html">RECIPES</a></li>
-        <li><a href="suggest.html">SUGGEST</a></li>
-    
+    <div class="header">
+        <img src="images/1.jpg">
+        <ul class="nav">
+            <li><a href="home.html">Home</a></li>
+            <li><a href="recipes.html">Recipes</a></li>
+            <li><a href="suggest.html">Suggest</a></li>
         </ul>
- RECIPES
+   </div>
+   <div class="main-content">
+    <h2>Recipes</h2>
+    <ul class="recipes">
+    <li>
+    <h3><a href="magic_cake.html">magic_cake</a></h3>
+    <p>this a dangerously delicious cake.</p>
+    </li>
+    <li>
+        <h3><a href="tacosaurs_mex.html">tacosaurs</a></h3>
+        </p>  it's always taco night somewhere.</p>
+    </li>
+    <li>
+        <h3><a href="florida_omelette">florida_omelette</a></h3>
+        </p>omolette you in on a little secret - this is one tastyegg .</p> 
+    </li>
+     <li>
+        <h3><a href="Mystery-wich">Mystery Wich</a></h3>
+        </p>it's a sandwich. That's all we can say right now.</p>
+     </li>
+    </ul>
+   </div>
+    
 </body>
 </html>
