--- a/suggest.html
+++ b/suggest.html
@@ -4,14 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Suggest</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <ul>
-        <li><a href="home.html">HOME</a></li>
-        <li><a href="recipes.html">RECIPES</a></li>
-        <li><a href="suggest.html">SUGGEST</a></li>
-    
+    <div class="header">
+        <img src="images/1.jpg">
+        <ul class="nav">
+            <li><a href="home.html">Home</a></li>
+            <li><a href="recipes.html">Recipes</a></li>
+            <li><a href="suggest.html">Suggest</a></li>
         </ul>
- SUGGEST   
+    </div>
+   <div class="main-content">
+    <form action="">
+        <label for="Recipe-name">Recipe Name</label>
+        <input id="Recipe-name"type="text">
+
+        <label for="Ingredients">Ingredients</label>
+        <textarea name="" id="Ingredients"></textarea>
+        
+        <input type="submit"value="click to submit">
+    </form>
+  </div>
+
 </body>
 </html>
+
+
+
+
+
+
+
+
+
