--- a/magic_cake.html
+++ b/magic_cake.html
@@ -2,53 +2,62 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Magic Cake</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="header">
+    <img src="images/1.jpg">
+        <ul class="nav">
+            <li><a href="home.html">Home</a></li>
+            <li><a href="recipes.html">Recipes</a></li>
+            <li><a href="suggest.html">Suggest</a></li>
+        </ul>
+   </div>
+   <div class="main-content">
+    <h2>Magic Cake</h2>
+    <p>
+        Magic Cake is one of the tastiest cakers the world has never known. 
+        Few have tried it and lived to tell about it, and there are thir stories
+    </p>
+    <h3>Ingredients</h3>
     <ul>
-    <li><a href="home.html">HOME</a></li>
-    <li><a href="recipes.html">RECIPES</a></li>
-    <li><a href="suggest.html">SUGGEST</a></li>
-
-    </ul>
-
-  <h1>Recipes World</h1>
-    <h2>Magic Cake</h2> 
-  <p>
-     Magic Cake is one of the tastiest cakers 
-    the world has never know .Few have tried it and lived to tell about it, and there are thir stories
-  </p> 
-    <h3>Ingredient</h3>
-    <ul>
-    <li>
-        2 eggs
-    </li>
-    <li>
-        1 pound of sugar
-    </li>
-    <li>
-        3 sticks of butter
-    </li>
+        <li>
+            2 eggs
+        </li>
+        <li>
+            1 pound of sugar
+        </li>
+        <li>
+            3 sticks of butter
+        </li>
     </ul>
     <h3>Directions</h3>
-<ol>
-    <li>
-        mix eggs,sugar,and butter in a large bowl
-    </li>
-    <li>
-        spread into a non- stick dish
-    </li>
-    <li>
-        bake at 350 dagres for 1 hours
-    </li>
-    <li>
-        let sit at room temperature for 20 minutes
-    </li>    
-    <li>
-        eat and enjoy 
-    </li>
-</ol>   
+    <ol>
+        <li>
+            Mix eggs, sugar, and butter in a large bowl
+        </li>
+        <li>
+            Spread into a non-stick dish
+        </li>
+        <li>
+            Bake at 350 degrees for 1 hour
+        </li>
+        <li>
+            Let sit at room temperature for 20 minutes
+        </li>
+        <li>
+            Eat and enjoy!
+        </li>
+    </ol>
+    <h3>Your photos</h3>
+<ul class="photos">
+    <li><img src="images/1.jpg" alt=""></li>
+    <li><img src="images/1.jpg" alt=""></li>
+    <li><img src="images/1.jpg" alt=""></li>
+</ul>
+   </div>   
+
 </body>
 </html>
